# goit-pythonweb-hw-08

./: pyproject.toml
app/: crud.py  database.py  main.py  models.py  schemas.py
